syntax = "proto3";

package ecommerce;

service OrderManagement {
    rpc getOrder (OrderRequest) returns (Order);
}

message Order {
    string id = 1;
    // repeated any number of times including zero in message
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}

message OrderRequest {
    string value = 1;
}

// protoc -I /Users/lichao30/gopath/pkg/mod/github.com/gogo/protobuf@v1.3.1/protobuf -I ecommerce --go_out=plugins=grpc:ecommerce ecommerce/ordermanagement.proto